<resources>
    <string name="app_name">NovaVida SJDR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_cadastro">Cadastro de Membros e Visitantes</string>
    <string name="edit_button">Editar</string>
    <string name="title_basic_data">Dados Básicos</string>
    <string name="title_contact_info">Dados de Contato</string>
    <string name="title_church_info">Igreja</string>
    <string name="title_uploaddocs">Documentos</string>
    <string name="complete_name">Nome Completo</string>
    <string name="save_button">Salvar Dados</string>
    <string name="fill_name">Digite seu nome completo</string>
    <string name="genero">Aqui tem Genero</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="Indisponivel"> Conteudo Indisponivel. Em breve novas atualizações! </string>
</resources>